# sdl-game-engine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
cmake/: common.cmake
libs/SDL/: SDL3headersTargets.cmake  SDL3staticTargets.cmake
libs/SDL/lib/arm64/: SDL3.lib  SDL3_test.lib
libs/sdl/debug/: SDL3.exp  SDL3_test.lib
libs/sdl/release/: SDL3.exp  SDL3_test.lib  SDL_uclibc.lib
libs/sdl_image/debug/: SDL3_image.exp
libs/sdl_mixer/debug/: SDL3_mixer.exp  SDL3_mixer.lib
libs/sdl_mixer/release/: SDL3_mixer.exp
libs/sdl_ttf/debug/: SDL3_ttf.exp
sdk/sdl/debug/: SDL3.lib  SDL_uclibc.lib
sdk/sdl_image/release/: SDL3_image.exp
sdk/sdl_ttf/release/: SDL3_ttf.exp  SDL3_ttf.lib
src/: CMakeLists.txt  DeathRunSDL.cpp  DeathRunSDL.h  main.cpp
src/game/: CMakeLists.txt  Game.cpp  Game.h
src/game-engine/: CMakeLists.txt  GameEngine.cpp  GameEngine.h  GameObject.h  GameObjectManager.cpp  GameObjectManager.h  ImageLoader.h
src/game-engine/audio/: Audio.cpp  Audio.h
src/game-engine/image/: Image.cpp  Image.h  SpriteAnimation.cpp  SpriteAnimation.h  SpriteSheet.cpp  SpriteSheet.h
src/game-engine/images/: Image.cpp  Image.h  Images.cpp  Images.h  SpriteAnimation.cpp  SpriteAnimation.h  SpriteSheet.cpp  SpriteSheet.h
src/game-engine/math/: vector.h
src/game-engine/object/: GameObject.h  GameObject2D.h  GameObject3D.h  GameObjectManager.cpp  GameObjectManager.h
src/game-engine/objects/: GameObject.h  GameObject2D.h  GameObject3D.h  GameObjectManager.cpp  GameObjectManager.h  SpriteAnimation.cpp  SpriteAnimation.h
src/game-engine/physics/: Collision2D.cpp  Collision2D.h
src/game-engine/text/: Text.cpp  Text.h
src/game-engine/texts/: Texts.cpp  Texts.h
src/game-engine/utilities/: Colors.h  EventQueue.h  Random.cpp  Random.h
src/game-pong/: Ball.cpp  Ball.h  CMakeLists.txt  EventTypes.h  Paddle.cpp  Paddle.h  PongConfig.h  PongGame.cpp  PongGame.h  Score.cpp  Score.h  main.cpp
src/game-pong/objects/: Ball.h  Paddle.cpp  Paddle.h
src/game-pong/score/: Score.cpp  Score.h
src/game-space-invaders/: CMakeLists.txt  Enemy.cpp  Enemy.h  SpaceInvadersConfig.h  SpaceInvadersGame.cpp  SpaceInvadersGame.h  main.cpp
src/game-space-invaders/events/: EventTypes.h
src/game-space-invaders/objects/: Bullet.cpp  Bullet.h  Enemy.cpp  Enemy.h  Player.cpp  Player.h
